25 September 2007

* When tags are replaced in strings, shell metacharacters are now stripped.
  This is to permit expressions such as:

	match "^Subject: (.*)" action tag "subject" value "%1"
	match all ... action exec "echo %[subject]"

  Without risk of the subject being, for instance, ";rm -Rf ~". This applies
  to all tags, even those defined manually or by fdm itself, and happens every
  time any tag is inserted (so in the above, the subject is in fact stripped
  twice, once when inserted as %1 and once as %[subject] - the second time to
  no effect).

  The list of characters to strip can be altered using the strip-characters
  option. The default is:

	set strip-characters "\\<>$%^&*|{}[]\"'`;"

  Stripping may be completely disabled by setting this string to "" (this will
  return to the old behaviour), or disabled per-tag by prefixing the tag name
  with :, for example %[:subject] or %:1.

  Note that this protection is limited: it does not, for instance, prevent use
  of ".." if using tags to create paths. Care should always be taken when
  inserting any data extracted from an incoming mail into a shell command.

24 September 2007

* All regexps (match, string, command) are now case insensitive by default and 
  may be prefixed by "case" to enable case sensitivity.
* The match string syntax changes were bloat and are reverted.

19 September 2007

* POP3 over pipe. Same as IMAP.

18 September 2007

* Split POP3 core off into pop3-common.c a la IMAP, in preparation for
  POP3-over-pipe.
* Change POP3 old/new mail to work from a list of mail-to-fetch and only ask
  for that mail, rather than retrieving and checking every mail UID.

17 September 2007

* Quote IMAP folder name to allow spaces and so on. SF bug 1791056.

05 September 2007

* Don't purge if no mails have been dropped.

03 September 2007

* Options to fetch only new or old mail from POP3 or IMAP accounts. Based on
  request to mailing list, and ensuing discussion, from patnel972-fdm at 