@@ -1,5 +1,9 @@
 25 September 2007
 
+* For POP3 and IMAP, don't have a seperate state for waiting-to-purge. Mail
+  could potentially be dropped (in fact, was very likely to be) while waiting
+  for queues to empty in that state. Instead, loop though the next state which
+  ensures all dropped mail is dealt with before attempting to purge.
 * When tags are replaced in strings, shell metacharacters are now stripped.
   This is to permit expressions such as:
 
@@ -690,4 +694,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.169 2007-09-25 17:45:37 nicm Exp $
+$Id: CHANGES,v 1.170 2007-09-25 19:07:18 nicm Exp $
